feat: добавить стили global

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="description" content="" />
     <link
       rel="stylesheet"
-      href="https://cdn.rawgit.com/bread2077/temp/main/pages/global.css"
+      href="https://cdn.rawgit.com/bread2077/temp/main/pages/global.v6.css"
     />
     <link
       rel="stylesheet"
-      href="https://cdn.rawgit.com/bread2077/temp/main/pages/index.css"
+      href="https://cdn.rawgit.com/bread2077/temp/main/pages/index.v2.css"
     />
     <title>Главная</title>
   </head>
@@ -41,6 +41,9 @@
             <a href="#" class="header__link header__link_type_menu">Услуги</a>
             <ul class="header__links-sublist">
               <li class="header__link-container">
+                <a href="/services" class="header__link">Цены</a>
+              </li>
+              <li class="header__link-container">
                 <a href="/layki" class="header__link">Лайки</a>
               </li>
               <li class="header__link-container">
@@ -57,142 +60,152 @@
               </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="/" class="header__link header__link_type_menu">ТikTok</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >ТikTok</a
+            >
             <ul class="header__links-sublist">
               <li class="header__link-container">
-                <a href="/" class="header__link">Главная</a>
+                <a href="/tiktok" class="header__link">Главная</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Просмотры</a>
+                <a href="/ttprosmotry" class="header__link">Просмотры</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Подписчики</a>
+                <a href="/ttpodpischiki" class="header__link">Подписчики</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Лайки</a>
+                <a href="/ttlayki" class="header__link">Лайки</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Комментарии</a>
+                <a href="/ttkommentarii" class="header__link">Комментарии</a>
               </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="/" class="header__link header__link_type_menu">Telegram</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >Telegram</a
+            >
             <ul class="header__links-sublist">
               <li class="header__link-container">
-                <a href="/" class="header__link">Главная</a>
+                <a href="/telegram" class="header__link">Главная</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Подписчики</a>
+                <a href="/tgpodpischiki" class="header__link">Подписчики</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Просмотры</a>
+                <a href="/tgprosmotry" class="header__link">Просмотры</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Реакции</a>
+                <a href="/tgreakcii" class="header__link">Реакции</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Голосования</a>
+                <a href="/tggolosovaniya" class="header__link">Голосования</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Комментарии</a>
+                <a href="/tgkommentarii" class="header__link">Комментарии</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Репосты</a>
+                <a href="/tgreposty" class="header__link">Репосты</a>
               </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="/" class="header__link header__link_type_menu">YouTube</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >YouTube</a
+            >
             <ul class="header__links-sublist">
               <li class="header__link-container">
-                <a href="/" class="header__link">Главная</a>
+                <a href="/youtube" class="header__link">Главная</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Подписчики</a>
+                <a href="/ytpodpischiki" class="header__link">Подписчики</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Просмотры</a>
+                <a href="/ytprosmotry" class="header__link">Просмотры</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Лайки</a>
+                <a href="/ytlayki" class="header__link">Лайки</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Комментарии</a>
+                <a href="/ytkommentarii" class="header__link">Комментарии</a>
               </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="/" class="header__link header__link_type_menu">VK</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >VK</a
+            >
             <ul class="header__links-sublist">
               <li class="header__link-container">
-                <a href="/" class="header__link">Главная</a>
+                <a href="/vkontakte" class="header__link">Главная</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Подписчики</a>
+                <a href="/vkpodpischiki" class="header__link">Подписчики</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Просмотры</a>
+                <a href="/vkprosmotry" class="header__link">Просмотры</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Лайки</a>
+                <a href="/vklayki" class="header__link">Лайки</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Опросы</a>
+                <a href="/vkoprosy" class="header__link">Опросы</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Прослушивания</a>
+                <a href="/vkproslushivaniya" class="header__link"
+                  >Прослушивания</a
+                >
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Комментарии</a>
+                <a href="/vkkommentarii" class="header__link">Комментарии</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Друзья</a>
+                <a href="/vkdruzya" class="header__link">Друзья</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Репосты</a>
+                <a href="/vkreposty" class="header__link">Репосты</a>
               </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="/" class="header__link header__link_type_menu"
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
               >Instagram*</a
             >
             <ul class="header__links-sublist">
               <li class="header__link-container">
-                <a href="/" class="header__link">Главная</a>
+                <a href="/instagram" class="header__link">Главная</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Лайки</a>
+                <a href="/instlayki" class="header__link">Лайки</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Подписчики</a>
+                <a href="/instpodpischiki" class="header__link">Подписчики</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Просмотры</a>
+                <a href="/instprosmotry" class="header__link">Просмотры</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Голоса</a>
+                <a href="/instagolosa" class="header__link">Голоса</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Репосты</a>
+                <a href="/instareposty" class="header__link">Репосты</a>
               </li>
               <li class="header__link-container">
-                <a href="/" class="header__link">Комментарии</a>
+                <a href="/instakommentarii" class="header__link">Комментарии</a>
               </li>
             </ul>
           </li>
         </ul>
         <div class="header__socials-container">
-          <a href="/" class="header__social">
+          <a href="#" class="header__social">
             <img
               class="header__social-logo"
               src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
               alt="Вконтакте"
             />
           </a>
-          <a href="" class="header__social">
+          <a href="#" class="header__social">
             <img
               class="header__social-logo"
               src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
@@ -202,11 +215,13 @@
         </div>
         <div class="header__buttons-container">
           <a
-            href="/"
+            href="/signup"
             class="btn btn_size_small btn_color_light-blue header__button"
             >Регистрация</a
           >
-          <a href="/" class="btn btn_size_small btn_color_blue header__button"
+          <a
+            href="#"
+            class="btn btn_size_small btn_color_blue header__button header__button_role_signin"
             >Вход</a
           >
         </div>
@@ -508,18 +523,36 @@
           </p>
         </div>
       </section>
-      <section class="registration">
+      <section class="registration" id="signIn">
         <h2 class="section-title registration__title">Вход</h2>
-        <form class="registration__form" action="" name="registration">
+        <form class="registration__form" {% if site['rtl'] %} class="rtl-form" {% endif %} method="post" target="_self" action="{{ page['url'] }}">
+          {% if error %}
+          <script type="text/javascript">
+           $(document).ready(function(){
+             var divLoc = $('#signIn').offset();
+             $('html, body').animate({scrollTop: divLoc.top}, "slow");
+          });
+          </script>
+                    <div class="alert alert-dismissible alert-danger {% if site['rtl'] %} rtl-alert {% endif %}">
+                      <button type="button" class="close" data-dismiss="alert">&times;</button>
+                      {{ errorMessage }}
+                    </div>
+                  {% endif %}
+
+                  {% if success %}
+                    <div class="alert alert-success alert-dismissible" role="alert">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      {{successMessage}}
+                    </div>
+                  {% endif %}
+                  <input type="hidden" name="_csrf" value="{{csrftoken}}" />
           <input
-            placeholder="Логин"
-            name="login"
+            placeholder="Логин" id="username" name="LoginForm[username]"
             class="registration__input registration__input_type_text registration__input_grid_login"
             type="text"
           />
           <input
-            placeholder="Пароль"
-            name="password"
+            placeholder="Пароль" id="password" name="LoginForm[password]"
             class="registration__input registration__input_type_text registration__input_grid_password"
             type="password"
           />
@@ -528,8 +561,7 @@
             class="registration__checkbox-label registration__input_grid_remember"
           >
             <input
-              name="remember"
-              id="remember-checkbox"
+              name="LoginForm[remember]" value="1" id="remember"
               class="registration__input registration__input_type_checkbox"
               type="checkbox"
             />
@@ -537,11 +569,18 @@
           </label>
           <p class="registration__text registration__text_grid_registration">
             Нет аккаунта?
-            <a class="registration__link" href="/">Зарегистрироваться</a>
+            <a class="registration__link" href="/signup">Зарегистрироваться</a>
           </p>
-          <a class="registration__link registration__link_grid_forget" href="/"
-            >Забыли пароль?</a
+          {% if site['resetPassword'] %}
+          <a class="registration__link registration__link_grid_forget" href="resetpassword"
+          >Забыли пароль?</a
           >
+          {% endif %}
+          <div class="registration__capcha">
+            {% if captcha %}
+                  {{ captchaCode }}
+                {% endif %}
+          </div>
           <button class="btn btn_color_orange registration__button">
             Войти в кабинет
           </button>
@@ -1816,7 +1855,7 @@
         <p class="culc__text"></p>
       </li>
     </template>
-    <script type="module" src="./scripts/base.js"></script>
+    <script type="module" src="./scripts/base.v3.js"></script>
     <script type="module" src="./scripts/pages/index.js"></script>
   </body>
 </html>
