feat: add webpack

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
           </p>
         </div>
       </section>
-      <section class="registration" id="signIn">
+      <!-- <section class="registration" id="signIn">
         <h2 class="section-title registration__title">Вход</h2>
         <form class="registration__form" {% if site['rtl'] %} class="rtl-form" {% endif %} method="post" target="_self" action="{{ page['url'] }}">
           {% if error %}
@@ -585,7 +585,7 @@
             Войти в кабинет
           </button>
         </form>
-      </section>
+      </section> -->
       <article class="long-read" id="long-read">
         <div class="long-read__container">
           <section
