--- a/telegram.html
+++ b/telegram.html
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./pages/global.css" />
+    <link rel="stylesheet" href="./pages/global.v17.css" />
     <link rel="stylesheet" href="./pages/telegram.css" />
     <title>Телеграм</title>
   </head>
