feat: ad styles

--- a/freeservise.html
+++ b/freeservise.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./pages/global.v17.css" />
-    <link rel="stylesheet" href="./pages/telegram.css" />
-    <title>Телеграм</title>
+    <link rel="stylesheet" href="./pages/freeservice.css" />
+    <title>Бесплатная накрутка</title>
   </head>
   <body class="root">
     <header class="header">
       <div class="header__mobile">
-        <a href="#" class="header__logo-container">
+        <a href="/" class="link header__logo-container">
           <span class="logo-title logo-title_pos_header"
             >SMM<span class="logo-accent">PRIME</span></span
           >
@@ -34,83 +34,176 @@
           <li class="header__link-container">
             <a href="#" class="header__link header__link_type_menu">Услуги</a>
             <ul class="header__links-sublist">
-              <a href="#" class="header__link">Лайки</a>
-              <a href="#" class="header__link">Подписчики</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Просмотры</a>
-              <a href="#" class="header__link">Репосты</a>
+              <li class="header__link-container">
+                <a href="/services" class="header__link">Цены</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/layki" class="header__link">Лайки</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/podpischiki" class="header__link">Подписчики</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/kommentarii" class="header__link">Комментарии</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/prosmotry" class="header__link">Просмотры</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/reposty" class="header__link">Репосты</a>
+              </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="#" class="header__link header__link_type_menu">ТikTok</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >ТikTok</a
+            >
             <ul class="header__links-sublist">
-              <a href="#" class="header__link">Главная</a>
-              <a href="#" class="header__link">Просмотры</a>
-              <a href="#" class="header__link">Подписчики</a>
-              <a href="#" class="header__link">Лайки</a>
-              <a href="#" class="header__link">Комментарии</a>
+              <li class="header__link-container">
+                <a href="/tiktok" class="header__link">Главная</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ttprosmotry" class="header__link">Просмотры</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ttpodpischiki" class="header__link">Подписчики</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ttlayki" class="header__link">Лайки</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ttkommentarii" class="header__link">Комментарии</a>
+              </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="#" class="header__link header__link_type_menu">Telegram</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >Telegram</a
+            >
             <ul class="header__links-sublist">
-              <a href="#" class="header__link">Главная</a>
-              <a href="#" class="header__link">Подписчики</a>
-              <a href="#" class="header__link">Просмотры</a>
-              <a href="#" class="header__link">Реакции</a>
-              <a href="#" class="header__link">Голосования</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Репосты</a>
+              <li class="header__link-container">
+                <a href="/telegram" class="header__link">Главная</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/tgpodpischiki" class="header__link">Подписчики</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/tgprosmotry" class="header__link">Просмотры</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/tgreakcii" class="header__link">Реакции</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/tggolosovaniya" class="header__link">Голосования</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/tgkommentarii" class="header__link">Комментарии</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/tgreposty" class="header__link">Репосты</a>
+              </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="#" class="header__link header__link_type_menu">YouTube</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >YouTube</a
+            >
             <ul class="header__links-sublist">
-              <a href="#" class="header__link">Главная</a>
-              <a href="#" class="header__link">Подписчики</a>
-              <a href="#" class="header__link">Просмотры</a>
-              <a href="#" class="header__link">Лайки</a>
-              <a href="#" class="header__link">Комментарии</a>
+              <li class="header__link-container">
+                <a href="/youtube" class="header__link">Главная</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ytpodpischiki" class="header__link">Подписчики</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ytprosmotry" class="header__link">Просмотры</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ytlayki" class="header__link">Лайки</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/ytkommentarii" class="header__link">Комментарии</a>
+              </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="#" class="header__link header__link_type_menu">VK</a>
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
+              >VK</a
+            >
             <ul class="header__links-sublist">
-              <a href="#" class="header__link">Главная</a>
-              <a href="#" class="header__link">Подписчики</a>
-              <a href="#" class="header__link">Просмотры</a>
-              <a href="#" class="header__link">Лайки</a>
-              <a href="#" class="header__link">Опросы</a>
-              <a href="#" class="header__link">Прослушивания</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Друзья</a>
-              <a href="#" class="header__link">Репосты</a>
+              <li class="header__link-container">
+                <a href="/vkontakte" class="header__link">Главная</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/vkpodpischiki" class="header__link">Подписчики</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/vkprosmotry" class="header__link">Просмотры</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/vklayki" class="header__link">Лайки</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/vkoprosy" class="header__link">Опросы</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/vkproslushivaniya" class="header__link"
+                  >Прослушивания</a
+                >
+              </li>
+              <li class="header__link-container">
+                <a href="/vkkommentarii" class="header__link">Комментарии</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/vkdruzya" class="header__link">Друзья</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/vkreposty" class="header__link">Репосты</a>
+              </li>
             </ul>
           </li>
-          <li lang="en" class="header__link-container">
-            <a href="#" class="header__link header__link_type_menu"
+          <li class="header__link-container">
+            <a lang="en" href="#" class="header__link header__link_type_menu"
               >Instagram*</a
             >
             <ul class="header__links-sublist">
-              <a href="#" class="header__link">Главная</a>
-              <a href="#" class="header__link">Лайки</a>
-              <a href="#" class="header__link">Подписчики</a>
-              <a href="#" class="header__link">Просмотры</a>
-              <a href="#" class="header__link">Голоса</a>
-              <a href="#" class="header__link">Репосты</a>
-              <a href="#" class="header__link">Комментарии</a>
+              <li class="header__link-container">
+                <a href="/instagram" class="header__link">Главная</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/instlayki" class="header__link">Лайки</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/instpodpischiki" class="header__link">Подписчики</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/instprosmotry" class="header__link">Просмотры</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/instagolosa" class="header__link">Голоса</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/instareposty" class="header__link">Репосты</a>
+              </li>
+              <li class="header__link-container">
+                <a href="/instakommentarii" class="header__link">Комментарии</a>
+              </li>
             </ul>
           </li>
         </ul>
         <div class="header__socials-container">
-          <a href="#" class="header__social">
+          <a
+            target="_blank"
+            href="https://vk.com/smmprime"
+            class="header__social"
+          >
             <img
               class="header__social-logo"
               src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
               alt="Вконтакте"
             />
           </a>
-          <a href="" class="header__social">
+          <a target="_blank" href="https://t.me/SmPrim" class="header__social">
             <img
               class="header__social-logo"
               src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
@@ -120,23 +213,23 @@
         </div>
         <div class="header__buttons-container">
           <a
-            href="#"
+            href="/signup"
             class="btn btn_size_small btn_color_light-blue header__button"
             >Регистрация</a
           >
-          <a href="#" class="btn btn_size_small btn_color_blue header__button"
+          <a
+            href="/#signIn"
+            class="btn btn_size_small btn_color_blue header__button header__button_role_signin"
             >Вход</a
           >
         </div>
       </nav>
     </header>
     <main class="content">
-      <section class="social-intro social-intro_type_tg">
+      <section class="social-intro">
         <div class="social-intro__container">
           <div class="social-intro__container-text">
-            <h1 class="social-intro__title">
-              Накрутка подписчиков в&nbsp;Телеграм с гарантией
-            </h1>
+            <h1 class="social-intro__title">Бесплатная накрутка</h1>
             <p class="text social-intro__text">
               От 1 рубля за 1000 подписчиков
             </p>
@@ -296,40 +389,46 @@
           </div>
         </div>
       </section>
-      <section class="service-list">
-        <h2 class="section-title service-list__title">Накрутка Телеграм</h2>
-        <div class="service-list__description">
-          <h3 class="service-list__description-subtitle">Обозначения</h3>
-          <ul class="service-list__description-list">
-            <li class="service-list__description-item">
-              ⭐ - пользователи рекомендуют
-            </li>
-            <li class="service-list__description-item">🔞 - любая тематика</li>
-            <li class="service-list__description-item">
-              ♻️ - бесплатное восстановление
-            </li>
-            <li class="service-list__description-item">
-              🌱 - органическая накрутка
-            </li>
-          </ul>
-        </div>
-        <div class="service-list__list-container">
-          <ul class="service-list__headers-list">
-            <li class="service-list__header-item">ID</li>
-            <li class="service-list__header-item">Название</li>
-            <li class="service-list__header-item">Стоимость за 1 000</li>
-            <li class="service-list__header-item">Время запуска</li>
-            <li class="service-list__header-item">Скорость</li>
-            <li class="service-list__header-item">Гарантия</li>
-            <li class="service-list__header-item"></li>
-          </ul>
-          <ul class="service-list__body"></ul>
-        </div>
-        <a
-          href="#"
-          class="btn btn_color_orange btn_size_large service-list__button"
-          >Смотреть все цены</a
-        >
+      <section class="freeservices">
+        <h2 class="section-title freeservices__title">
+          Получи бесплатную накрутку
+        </h2>
+        <form action="" class="freeservices__form">
+          <h3 class="freeservices__subtitle"></h3>
+          <p class="text freeservices__waiting">
+            Время ожидания осталось
+            <span class="freeservices__time"></span> сек
+          </p>
+          <p class="text freeservices__response freeservices__responce_hidden">
+            Услуга взята в работу
+          </p>
+          <div class="freeservices__select-container">
+            <select
+              class="freeservices__input freeservices__input_type_select"
+              name="service"
+              id=""
+              required
+            >
+              <option value="708">Telegram Просмотры (100 штук)</option>
+              <option value="869">Telegram Реакции (10 штук)</option>
+              <option value="499">Instagram Лайки (10 штук)</option>
+              <option value="764">Tik-Tok Просмотры (100 штук)</option>
+              <option value="753">Вконтакте Просмотры (100 штук)</option>
+            </select>
+          </div>
+          <input
+            class="freeservices__input freeservices__input_type_link"
+            type="url"
+            placeholder="Введите ссылку"
+            required
+          />
+          <button
+            class="btn btn_color_blue btn_size_large freeservices__submit btn_disabled"
+            type="submit"
+          >
+            Получить
+          </button>
+        </form>
       </section>
       <section
         class="optimization optimization_bg_white optimization_type_single"
@@ -1778,7 +1877,7 @@
         >
       </div>
     </div>
-    <script type="module" src="./scripts/base.js"></script>
-    <script type="module" src="./scripts/pages/telegram-views.js"></script>
+    <script type="module" src="./dist/base.380ce17cfde36107dc74.js"></script>
+    <script type="module" src="./scripts/pages/freeservises.js"></script>
   </body>
 </html>
