fix: update desktop menu

--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.rawgit.com/bread2077/temp/main/pages/global.v6.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.rawgit.com/bread2077/temp/main/pages/index.v2.css"
-    />
+    <link rel="stylesheet" href="./pages/global.v17.css" />
+    <link rel="stylesheet" href="./pages/index.v10.css" />
     <title>Главная</title>
   </head>
   <body class="root">
@@ -1974,7 +1968,7 @@
         <p class="culc__text"></p>
       </li>
     </template>
-    <script type="module" src="./scripts/base.v3.js"></script>
-    <script type="module" src="./scripts/pages/index.js"></script>
+    <script type="module" src="./dist/base.a2052ea2b8ca28bc768f.js"></script>
+    <script type="module" src="./dist/index.a2052ea2b8ca28bc768f.js"></script>
   </body>
 </html>
